# DateBotRust

./: .env  Cargo.toml
migrations/: 20231007225146_user_tables.sql  20231007225929_duplet_table.sql  20231007231340_not_null_constraint.sql
src/: callback_handler.rs  command.rs  domain.rs  functions.rs  lib.rs  main.rs  registration.rs
