[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"
serde = "1.0.188"
anyhow = "1.0.75"
lazy_format = "2.0.0"
joinery = "3.1.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
   "runtime-tokio-rustls",
   "macros",
   "postgres",
   "uuid",
   "chrono",
   "migrate"
]
